# Pipeline_CI_CD

./: .gitignore  404.html  README.md  docker-compose.yml  index.html  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci-cd.yml  train_model.yml
backend/: Dockerfile  requirements.txt
backend/app/: main.py  model.py  model_loader.py
backend/app/core/: logger.py
backend/ml/: connect_mlflow.py  train_model.py
backend/ml/model/: model.pkl
backend/tests/: test_api.py  test_train.py
docs/: index.md
docs/user_guide/: getting_started.md  manual_run.md  manual_run_container.md
frontend/: app.py
search/: search_index.json
user_guide/getting_started/: index.html
user_guide/manual_run/: index.html
user_guide/manual_run_container/: index.html
