[project]
name = "pipeline-ci-cd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2",
    "httpx>=0.28.1",
    "logging>=0.4.9.6",
    "mkdocs>=1.6.1",
    "mlflow>=3.6.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
    "scikit-learn>=1.7.2",
    "streamlit>=1.51.0",
]
